...
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/label_name"
            app:layout_constraintEnd_toStartOf="@+id/ibIconPicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ibIconPicker"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:adjustViewBounds="false"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/title_dialog_icon_picker"
            android:scaleType="centerInside"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.ActivityLauncher.Icon"
            app:layout_constraintBottom_toBottomOf="@+id/tilName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilName"
            app:srcCompat="@mipmap/ic_launcher" />
...
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/label_package"
            app:layout_constraintTop_toBottomOf="@+id/ibIconPicker">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLaunchPlugin"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/label_launch_plugins"
            app:startIconTint="@null"
...
                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            app:icon="@drawable/ic_tune"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/action_save"
            app:layout_constraintTop_toBottomOf="@+id/tilLaunchPlugin" />

        <LinearLayout
            android:id="@+id/llLaunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btSave">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLaunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_rocket_launch"
                app:iconTint="?attr/colorOnPrimary"
                android:text="@string/context_action_launch" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLaunchChooser"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                app:icon="@drawable/ic_more_vert" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCreateShortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/llLaunch">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCreateShortcut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_add_home_work"
                app:iconTint="?attr/colorOnPrimary"
                android:text="@string/context_action_shortcut" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCreateShortcutChooser"
                style="?attr/materialIconButtonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                app:icon="@drawable/ic_more_vert" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btShareShortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_share"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/context_action_share_shortcut"
            app:layout_constraintTop_toBottomOf="@+id/llCreateShortcut" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_favorite_border"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/context_action_favorite_add"
            app:layout_constraintTop_toBottomOf="@+id/btShareShortcut" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

